<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/linearLayout2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:id="@+id/main_title"
            android:layout_above="@+id/linearLayout2"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"
            android:textStyle="normal"
            android:typeface="normal"
            android:gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout">

            <EditText android:id="@+id/item_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/input_search_text"
                android:inputType="textVisiblePassword"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_button_text"
                android:id="@+id/button_search"
                android:nestedScrollingEnabled="false"
                android:textStyle="normal"
                android:typeface="normal" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/routes_title"
            android:id="@+id/routes_title" />

        <ListView
            android:id="@+id/list_routes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_alignTop="@+id/linearLayout"
            android:layout_alignParentStart="true"
            android:layout_gravity="top" />

    </LinearLayout>

</RelativeLayout>
